--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --watch src/server -r ts-node/register ./src/server/index.tsx"
+    "dev": "nodemon --watch src/server -r ts-node/register ./src/server/index.tsx",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
     "@reach/router": "^1.3.1",
@@ -18,6 +19,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@storybook/react": "^5.3.13",
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.26",
     "@types/reach__router": "^1.2.6",
@@ -29,10 +31,15 @@
     "@types/webpack-dev-middleware": "^2.0.3",
     "@types/webpack-hot-middleware": "^2.25.0",
     "@types/webpack-merge": "^4.1.5",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.1.1",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "nodemon": "^2.0.2",
+    "prettier": "1.19.1",
+    "react-docgen-typescript-loader": "^3.6.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-hot-loader": "^4.12.19",
     "source-map-loader": "^0.2.4",
     "ts-node": "^8.6.2",
