--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --watch src/server -r ts-node/register ./src/server/index.tsx",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "dev": "nodemon --watch src/server/**/* src/server/server.ts",
+    "build": "webpack --config build/webpack.production.ts"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
     "@reach/router": "^1.3.1",
+    "axios": "^0.19.2",
+    "effector": "^20.11.5",
+    "effector-react": "^20.6.0",
     "express": "^4.17.1",
+    "path-to-regexp": "^6.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "serve-static": "^1.14.1",
@@ -22,6 +28,7 @@
     "@storybook/react": "^5.3.13",
     "@types/express": "^4.17.2",
     "@types/node": "^12.12.26",
+    "@types/nodemon": "^1.19.0",
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
