--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
     "@babel/polyfill": "^7.8.3",
     "@reach/router": "^1.3.1",
     "axios": "^0.19.2",
-    "effector": "^20.11.5",
-    "effector-react": "^20.6.0",
+    "effector": "^20.12.0",
+    "effector-react": "^20.6.1",
     "express": "^4.17.1",
     "path-to-regexp": "^6.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "serve-static": "^1.14.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@storybook/react": "^5.3.13",
     "@types/express": "^4.17.2",
-    "@types/node": "^12.12.26",
+    "@types/node": "^13.7.4",
     "@types/nodemon": "^1.19.0",
-    "@types/reach__router": "^1.2.6",
-    "@types/react": "^16.9.19",
+    "@types/reach__router": "^1.3.0",
+    "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
     "@types/serve-static": "^1.13.3",
-    "@types/styled-components": "^4.4.2",
+    "@types/styled-components": "^5.0.0",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-middleware": "^2.0.3",
     "@types/webpack-hot-middleware": "^2.25.0",
@@ -41,19 +44,20 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.1",
-    "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "file-loader": "^5.1.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.4",
     "nodemon": "^2.0.2",
     "prettier": "1.19.1",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-hot-loader": "^4.12.19",
     "source-map-loader": "^0.2.4",
+    "terser-webpack-plugin": "^2.3.5",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.2",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
