--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "effector/babel-plugin"
+    "effector/babel-plugin",
+    "babel-plugin-styled-components"
   ]
 }
