--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.8.3",
     "@reach/router": "^1.3.1",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.21",
     "effector": "^20.12.0",
     "effector-react": "^20.6.1",
     "express": "^4.17.1",
@@ -81,6 +82,6 @@
     "arrowParens": "avoid",
     "jsxSingleQuote": true,
     "semi": false,
-    "printWidth": 80
+    "printWidth": 120
   }
 }
