--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "cross-env NODE_ENV=production PORT=80 node .build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "dev": "nodemon --watch src/server/**/* src/server/server.ts",
-    "build": "webpack --config build/webpack.production.ts"
+    "build": "npm run clean && tsc --outDir .build --skipLibCheck src/server/*.ts && webpack --config webpack/client.prod.ts && webpack --config webpack/ssr.prod.ts",
+    "clean": "rimraf .build"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
     "@reach/router": "^1.3.1",
     "axios": "^0.19.2",
+    "cross-env": "^7.0.0",
     "dayjs": "^1.8.21",
     "effector": "^20.12.0",
     "effector-react": "^20.6.1",
@@ -61,7 +64,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "webpack-stats-plugin": "^0.3.1"
   },
   "eslintConfig": {
     "extends": "react-app"
