--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,14 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "effector/babel-plugin",
-    "babel-plugin-styled-components"
-  ]
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "env": {
+    "development": {
+      "plugins": [
+        "effector/babel-plugin",
+        "babel-plugin-styled-components"
+      ]
+    }
+  }
 }
