[Build] Added gitlab-ci and fix start script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production PORT=80 node .build/server.js",
+    "start": "cross-env NODE_ENV=production node .build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "dev": "nodemon --watch src/server/**/* src/server/server.ts",
     "build": "npm run clean && tsc --outDir .build --skipLibCheck src/server/*.ts && webpack --config webpack/client.prod.ts && webpack --config webpack/ssr.prod.ts",
