--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
     IMAGE: $CI_REGISTRY_IMAGE:latest
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD registry.gitlab.com
-    - docker pull $IMAGE
+    - docker pull $IMAGE || true
     - docker build -t $IMAGE .
     - docker push $IMAGE
   only:
