--- a/.babelrc
+++ b/.babelrc
@@ -5,12 +5,12 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "effector/babel-plugin"
   ],
   "env": {
     "development": {
       "plugins": [
-        "effector/babel-plugin",
         "babel-plugin-styled-components"
       ]
     }
