[Adapt] Start coaches adaptation

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "serve-static": "^1.14.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
