--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-multi-carousel": "^2.5.2",
     "serve-static": "^1.14.1",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
