--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-multi-carousel": "^2.5.2",
+    "react-slider": "^1.0.3",
     "serve-static": "^1.14.1",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
+    "@types/react-slider": "^1.0.0",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
