--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "path-to-regexp": "^6.1.0",
     "react": "^16.12.0",
+    "react-calendar": "^3.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-multi-carousel": "^2.5.2",
