--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "~/*": ["src/*"]
+      "@app/*": ["src/application/*"]
     },
     "target": "es5",
     "module": "commonjs",
@@ -12,10 +12,10 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "typeRoots": [
