--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^16.12.0",
     "react-calendar": "^3.0.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-helmet": "^5.2.1",
+    "react-image-crop": "^8.5.0",
     "react-multi-carousel": "^2.5.2",
     "react-slider": "^1.0.3",
     "serve-static": "^1.14.1",
