--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "types"
     ]
   },
   "include": [
