--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "effector": "^20.12.0",
     "effector-react": "^20.6.1",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "path-to-regexp": "^6.1.0",
     "react": "^16.12.0",
     "react-calendar": "^3.0.0",
@@ -42,6 +43,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@storybook/react": "^5.3.13",
     "@types/express": "^4.17.2",
+    "@types/js-cookie": "^2.2.5",
     "@types/node": "^13.7.4",
     "@types/nodemon": "^1.19.0",
     "@types/reach__router": "^1.3.0",
