--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^7.0.0",
     "dayjs": "^1.8.21",
     "effector": "^20.12.0",
+    "effector-next": "^0.2.0",
     "effector-react": "^20.6.1",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
