--- a/package.json
+++ b/package.json
@@ -3,28 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=production next start",
+    "start": "next start",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "dev": "next dev"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
     "axios": "^0.19.2",
-    "cross-env": "^7.0.0",
-    "dayjs": "^1.8.21",
-    "effector": "^20.12.0",
+    "dayjs": "^1.8.23",
+    "effector": "^20.13.4",
     "effector-next": "^0.2.0",
-    "effector-react": "^20.6.1",
-    "express": "^4.17.1",
+    "effector-react": "^20.6.3",
     "js-cookie": "^2.2.1",
-    "next": "^9.3.1",
+    "next": "^9.3.2",
     "next-images": "^1.3.1",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-calendar": "^3.0.0",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^10.2.2",
     "react-image-crop": "^8.5.0",
-    "react-multi-carousel": "^2.5.2",
+    "react-multi-carousel": "^2.5.3",
     "react-slider": "^1.0.3",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
@@ -32,12 +29,12 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@effector/babel-plugin": "^0.5.0",
-    "@storybook/react": "^5.3.13",
+    "@storybook/react": "^5.3.17",
     "@types/js-cookie": "^2.2.5",
-    "@types/node": "^13.7.4",
-    "@types/react": "^16.9.22",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
-    "@types/styled-components": "^5.0.0",
+    "@types/styled-components": "^5.0.1",
     "typescript": "^3.8.3"
   },
   "eslintConfig": {
