--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "next start",
+    "build": "next build",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "dev": "next dev"
   },
