--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
+    "babel-preset-react-app": "^9.1.2",
     "typescript": "^3.8.3"
   },
   "eslintConfig": {
