--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "effector-react": "^20.6.3",
     "js-cookie": "^2.2.1",
     "next": "^9.3.2",
-    "next-images": "^1.3.1",
+    "next-optimized-images": "^2.6.0",
     "react": "^16.13.1",
     "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
@@ -38,7 +38,14 @@
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
     "babel-preset-react-app": "^9.1.2",
-    "typescript": "^3.8.3"
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.1.0",
+    "svg-sprite-loader": "4.1.3",
+    "svg-baker-runtime": "^1.4.7",
+    "typescript": "^3.8.3",
+    "webp-loader": "^0.6.0"
   },
   "eslintConfig": {
     "extends": "react-app"
