--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "simplebar-react": "^2.1.0",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2",
-    "url-loader": "^4.1.0"
+    "url-loader": "^4.1.0",
+    "svg-baker-runtime": "^1.4.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -43,7 +44,6 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^7.1.0",
     "imagemin-svgo": "^7.1.0",
-    "svg-baker-runtime": "^1.4.7",
     "svg-sprite-loader": "4.1.3",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
