--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2",
     "url-loader": "^4.1.0",
-    "svg-baker-runtime": "^1.4.7"
+    "svg-baker-runtime": "^1.4.7",
+    "svg-sprite-loader": "4.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -44,7 +45,6 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^7.1.0",
     "imagemin-svgo": "^7.1.0",
-    "svg-sprite-loader": "4.1.3",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webp-loader": "^0.6.0"
