--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-image-crop": "^8.5.0",
+    "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.5.3",
     "react-slider": "^1.0.3",
     "simplebar-react": "^2.1.0",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2",
-    "url-loader": "^4.1.0",
     "svg-baker-runtime": "^1.4.7",
-    "svg-sprite-loader": "4.1.3"
+    "svg-sprite-loader": "4.1.3",
+    "url-loader": "^4.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -39,6 +40,7 @@
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "@types/react-input-mask": "^2.0.5",
     "@types/styled-components": "^5.0.1",
     "babel-preset-react-app": "^9.1.2",
     "imagemin-gifsicle": "^7.0.0",
