--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "next dev"
   },
   "dependencies": {
+    "@types/swiper": "^5.3.1",
     "axios": "^0.19.2",
     "dayjs": "^1.8.23",
     "effector": "^20.13.4",
@@ -21,6 +22,7 @@
     "react-calendar": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
+    "react-id-swiper": "^3.0.0",
     "react-image-crop": "^8.5.0",
     "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.5.3",
@@ -30,6 +32,7 @@
     "styled-media-query": "^2.1.2",
     "svg-baker-runtime": "^1.4.7",
     "svg-sprite-loader": "4.1.3",
+    "swiper": "^5.4.0",
     "url-loader": "^4.1.0"
   },
   "devDependencies": {
