--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
 build:
   stage: build
   variables:
-    IMAGE: $CI_REGISTRY_IMAGE:latest
+    IMAGE: $CI_REGISTRY_IMAGE:stable
     BACKEND_URL: http://backend.itrainyou.ru
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD registry.gitlab.com
