--- a/package.json
+++ b/package.json
@@ -49,10 +49,14 @@
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^8.0.0",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.3",
     "url-loader": "^4.1.0",
     "webp-loader": "^0.6.0"
   },
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "eslintConfig": {
     "extends": "react-app"
   },
