--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^11.0.1",
     "react-id-swiper": "^3.0.0",
     "react-image-crop": "^8.6.2",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-maskedinput": "^4.0.1",
     "react-multi-carousel": "^2.5.5",
     "react-slider": "^1.0.7",
