--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "next start -p $PORT",
+    "start": "NODE_ENV=production node server.js",
     "build": "next build",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "dev": "next dev"
+    "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
