--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "dayjs": "^1.8.28",
     "effector": "^20.15.6",
     "effector-next": "^1.1.0",
     "effector-react": "^20.7.2",
+    "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "next": "^9.4.4",
     "next-optimized-images": "^2.6.0",
