--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "effector-react": "^20.8.0",
     "effector-root": "^0.2.0",
     "express": "^4.17.1",
+    "history": "4.10.1",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
@@ -56,6 +57,7 @@
     "prettier": "^2.0.5",
     "razzle": "^3.1.3",
     "razzle-plugin-typescript": "^3.1.3",
+    "svg-sprite-loader": "^5.0.0",
     "typescript": "^3.9.5"
   },
   "prettier": {
