--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
-    "release:heroku": "heroku container:push web && heroku container:release web"
+    "release:heroku": "heroku container:push -a itrainnew-frontend web && heroku container:release -a itrainnew-frontend web"
   },
   "resolutions": {
     "@types/react": "16.9.37"
