--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
   "plugins": [
-    ["effector/babel-plugin", {
-      "addLoc": true
-    }],
+    ["effector/babel-plugin"],
     ["styled-components", {"displayName": true, "ssr": true}]
   ]
 }
