--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "effector-react": "^20.9.0",
     "effector-root": "^0.2.0",
     "express": "^4.17.1",
+    "get-timezone-offset": "^1.0.4",
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
     "patronum": "^0.14.1",
