--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "16.9.37"
   },
   "dependencies": {
+    "@types/agora-rtc-sdk": "^3.1.0",
+    "agora-rtc-sdk": "^3.1.1",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
     "dayjs": "^1.8.34",
