--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ deploy:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:stable
     IMAGE_NAME: itrainyoufrontend
-    SERVER_IP: 'itrainyou.ru'
+    SERVER_IP: 109.71.10.78
     USER: 'django'
   script:
     - 'which ssh-agent || (apt-get update -y && apt-get install openssh-client -y)'
@@ -47,7 +47,7 @@ deploy:
     - echo "$PRODUCTION_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - ssh -p22 $USER@$SERVER_IP "docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} registry.gitlab.com"
     - ssh -p22 $USER@$SERVER_IP "docker pull ${IMAGE_TAG}"
-    - ssh -p22 $USER@$SERVER_IP "docker rm -f ${IMAGE_NAME}"
+    - ssh -p22 $USER@$SERVER_IP "docker rm -f ${IMAGE_NAME} || true"
     - ssh -p22 $USER@$SERVER_IP "docker run --network=itrainyoubackend_default --name ${IMAGE_NAME} -e BACKEND_URL=https://backend.itrainyou.ru -e WS_HOST=wss://backend.itrainyou.ru -e PORT=3000 -d ${IMAGE_TAG}"
     - ssh -p22 $USER@$SERVER_IP "docker logout registry.gitlab.com"
   only:
