--- a/package.json
+++ b/package.json
@@ -64,12 +64,16 @@
     "@types/serialize-javascript": "^1.5.0",
     "@types/styled-components": "^5.1.0",
     "@types/swiper": "^5.4.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-styled-components": "^1.10.7",
     "prettier": "^2.0.5",
     "razzle": "^3.1.4",
     "razzle-plugin-typescript": "^3.1.4",
     "svg-sprite-loader": "^5.0.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "prettier": {
     "arrowParens": "avoid",
