--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "webpack",
     "jest",
     "razzle.config.js",
+    "babel.config.js",
     "svg",
     "./admin-chats/webpack.config.js"
   ]
