--- a/package.json
+++ b/package.json
@@ -64,8 +64,12 @@
     "@types/serialize-javascript": "^1.5.0",
     "@types/styled-components": "^5.1.0",
     "@types/swiper": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^7.12.1",
+    "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "prettier": "^2.0.5",
     "razzle": "^3.3.6",
