fix: пофиксил redirect uri, сделал hostname динамическим, вынес client_id в .env

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 BACKEND_URL=https://dev.itrainyou.heksray.com
 WS_HOST=wss://dev.itrainyou.heksray.com
 AGORA_ID=ddc00001a79048e98fc21cfeef7efa7c
+FACEBOOK_CLIENT_ID=588161764971621
