--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 BACKEND_URL=https://dev.itrainyou.heksray.com
 WS_HOST=wss://dev.itrainyou.heksray.com
 AGORA_ID=ddc00001a79048e98fc21cfeef7efa7c
+SENTRY_DSN=https://f6205d3153964e93afabe2313b1b2ab3@o474760.ingest.sentry.io/5511546
