--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/react": "16.9.37"
   },
   "dependencies": {
+    "@sentry/node": "^5.27.3",
+    "@sentry/react": "^5.27.3",
+    "@sentry/tracing": "^5.27.3",
     "@types/agora-rtc-sdk": "^3.1.0",
     "agora-rtc-sdk": "^3.1.1",
     "axios": "^0.19.2",
