--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ deploy:
     - ssh -p22 $USER@$SERVER_IP "docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} registry.gitlab.com"
     - ssh -p22 $USER@$SERVER_IP "docker pull ${IMAGE_TAG}"
     - ssh -p22 $USER@$SERVER_IP "docker rm -f ${IMAGE_NAME} || true"
-    - ssh -p22 $USER@$SERVER_IP "docker run --network=itrainyou-backend_default --name ${IMAGE_NAME} -e BACKEND_URL=https://backend.itrainyou.ru -e WS_HOST=wss://backend.itrainyou.ru -e PORT=3000 --restart unless-stopped -d ${IMAGE_TAG}"
+    - ssh -p22 $USER@$SERVER_IP "docker run --network=itrainyou-backend_default --name ${IMAGE_NAME} -e BACKEND_URL=https://backend.itrainyou.ru -e WS_HOST=wss://backend.itrainyou.ru -e PORT=3000 -e AGORA_ID=ddc00001a79048e98fc21cfeef7efa7c --restart unless-stopped -d ${IMAGE_TAG}"
     - ssh -p22 $USER@$SERVER_IP "docker logout registry.gitlab.com"
   only:
     - master
