Переменная окружения для сервера прода

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ SENTRY_SERVER_DSN=https://b359770ce05a40ab86c17dd35faf34c1@o474760.ingest.sentry
 FACEBOOK_CLIENT_ID=588161764971621
 VK_CLIENT_ID=7636787
 GOOGLE_CLIENT_ID=536974560462-812pv0n2s063m7keq9eiluqve3lfelf1.apps.googleusercontent.com
+SERVER_TYPE=development
