--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
     "effector-root": "^1.1.0",
+    "eruda": "^2.4.1",
     "express": "^4.17.1",
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
