--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "effector-root": "^1.1.0",
     "eruda": "^2.4.1",
     "express": "^4.17.1",
+    "express-useragent": "^1.0.15",
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
     "patronum": "^0.110.0",
