--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
+    "react-full-screen": "^1.0.1",
     "react-google-login": "^5.1.22",
     "react-id-swiper": "^4.0.0",
     "react-image-crop": "^8.6.2",
