--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eruda": "^2.4.1",
     "express": "^4.17.1",
     "express-useragent": "^1.0.15",
+    "heic2any": "0.0.3",
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
     "patronum": "^0.110.0",
