--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ services:
   - docker:18.09-dind
 
 stages:
-  - build-dev
+  - build
   - deploy-dev
   - deploy-master
 
@@ -31,6 +31,7 @@ build:
   only:
     - development
     - master
+  when: manual
 
 deploy-dev:
   stage: deploy
