--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ stages:
     - docker push $IMAGE
     - docker push $LATEST_IMAGE
     - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-    - docker push registry.heroku.com/itrainnew-frontend/web
+    - docker push $HEROKU_IMAGE
 
 build:
   extends: .build
