--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ build:
   variables:
     IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     LATEST_IMAGE: $CI_REGISTRY_IMAGE:latest
-    HEROKU_IMAGE: registry.heroku.com/itrainnew-frontend/web
+    HEROKU_APP_NAME: itrainnew-frontend
+    HEROKU_IMAGE: registry.heroku.com/$HEROKU_APP_NAME/web
   only:
     - development
     - master
@@ -38,9 +39,10 @@ deploy-dev:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     IMAGE_NAME: itrainyoufrontend
+    HEROKU_APP_NAME: itrainnew-frontend
   script:
     - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-    - docker run --rm -e HEROKU_API_KEY=$HEROKU_API_KEY wingrunr21/alpine-heroku-cli container:release web --app $IMAGE_NAME
+    - docker run --rm -e HEROKU_API_KEY=$HEROKU_API_KEY wingrunr21/alpine-heroku-cli container:release web --app $HEROKU_APP_NAME
   only:
     - development
   when: manual
