--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@sentry/react": "^5.27.3",
     "@sentry/tracing": "^5.27.3",
     "@types/agora-rtc-sdk": "^3.1.0",
+    "@types/downloadjs": "^1.4.2",
     "agora-rtc-sdk": "^3.4.0",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
     "dayjs": "^1.8.34",
+    "downloadjs": "^1.4.7",
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
     "effector-root": "^1.1.0",
