feat: Поменял ветки в gitlab.ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ build:
   only:
     - development
     - master
+    - free-sessions
   when: manual
 
 deploy-dev:
@@ -45,6 +46,7 @@ deploy-dev:
     - docker run --rm -e HEROKU_API_KEY=$HEROKU_API_KEY wingrunr21/alpine-heroku-cli container:release web --app $HEROKU_APP_NAME
   only:
     - development
+    - free-sessions
   when: manual
 
 deploy-prod:
