feature: убрал ИНН и легалформ для Тинька, поправил комиссию в регистрации

--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ FACEBOOK_CLIENT_ID=588161764971621
 VK_CLIENT_ID=7636787
 GOOGLE_CLIENT_ID=536974560462-812pv0n2s063m7keq9eiluqve3lfelf1.apps.googleusercontent.com
 SERVER_TYPE=development
+SERVER_DEFAULT_PAYMENT_SYSTEM=TINKOFF
