--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-id-swiper": "^4.0.0",
     "react-image-crop": "^8.6.2",
     "react-infinite-scroll-component": "^5.0.5",
+    "react-jivosite": "^1.0.0",
     "react-maskedinput": "^4.0.1",
     "react-multi-carousel": "^2.5.5",
     "react-router-config": "^5.1.1",
