feauture: запоминание сессий у коуча при регистрации

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ SENTRY_SERVER_DSN=https://1e724690c04949558b4f7f34d1536690@o474760.ingest.sentry
 FACEBOOK_CLIENT_ID=588161764971621
 VK_CLIENT_ID=7636787
 GOOGLE_CLIENT_ID=536974560462-812pv0n2s063m7keq9eiluqve3lfelf1.apps.googleusercontent.com
-SERVER_TYPE=local
+ENVIRONMENT=local
 SERVER_DEFAULT_PAYMENT_SYSTEM=TINKOFF
 YANDEX_METRIKA_ID=68738200
 JIVO_ID=EcD5Lp21sP
