--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
     "effector-root": "^1.1.0",
+    "effector-storage": "^4.2.1",
     "eruda": "^2.4.1",
     "express": "^4.17.1",
     "express-useragent": "^1.0.15",
