--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-id-swiper": "^4.0.0",
     "react-image-crop": "^8.6.2",
     "react-infinite-scroll-component": "^5.0.5",
+    "react-linkify": "^1.0.0-alpha",
     "react-maskedinput": "^4.0.1",
     "react-multi-carousel": "^2.5.5",
     "react-router-config": "^5.1.1",
@@ -70,6 +71,7 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-linkify": "^1.0.1",
     "@types/react-maskedinput": "^4.0.4",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.5",
