--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,15 +21,18 @@ stages:
     - docker push $IMAGE
     - docker push $LATEST_IMAGE
     - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-    - docker push $HEROKU_IMAGE
+    - docker push $HEROKU_IMAGE_DEV
+    - docker push $HEROKU_IMAGE_STAGING
 
 build:
   extends: .build
   variables:
     IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     LATEST_IMAGE: $CI_REGISTRY_IMAGE:latest
-    HEROKU_APP_NAME: itrainnew-frontend
-    HEROKU_IMAGE: registry.heroku.com/$HEROKU_APP_NAME/web
+    HEROKU_APP_NAME_DEV: itrainnew-frontend
+    HEROKU_APP_NAME_STAGING: stage-itrainyou
+    HEROKU_IMAGE_DEV: registry.heroku.com/$HEROKU_APP_NAME_DEV/web
+    HEROKU_IMAGE_STAGING: registry.heroku.com/$HEROKU_APP_NAME_STAGING/web
   only:
     - development
     - master
