--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_smart_tabs = false
 ij_wrap_on_typing = false
+end_of_line = lf
 
 [*.css]
 ij_css_align_closing_brace_with_properties = false
