--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,17 @@ services:
   - docker:18.09-dind
 
 stages:
+  - test
   - build
   - deploy-dev
   - deploy-prod
   - deploy-staging
+
+test:
+  stage: test
+  script:
+    - npm ci
+    - npm run test
 
 .build:
   stage: build
