--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test:
   stage: test
   script:
     - npm ci
-    - npm run test --ci --reporters=default --reporters=jest-junit'
+    - npm run test --ci --reporters=default --reporters=jest-junit
   artifacts:
     when: always
     reports:
