--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "razzle start",
     "build": "razzle build",
-    "test": "razzle test --env=jsdom",
+    "test": "razzle test",
     "start": "NODE_ENV=production node build/server.js",
     "release:heroku": "heroku container:push -a itrainnew-frontend web && heroku container:release -a itrainnew-frontend web",
     "admin-chats-dev": "webpack-dev-server --config ./admin-chats/webpack.config.js --mode development --open --hot",
@@ -85,6 +85,7 @@
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
+    "jest-junit": "^12.2.0",
     "prettier": "^2.0.5",
     "razzle": "^3.3.6",
     "razzle-plugin-typescript": "^3.3.6",
