--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "heic2any": "0.0.3",
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
+    "node-fetch": "^2.6.1",
     "patronum": "^0.110.0",
     "react": "^17.0.2",
     "react-calendar": "^3.1.0",
